save spacific, update gitignore

--- a/BasinAnalysis.ipynb
+++ b/BasinAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "[1118939 rows x 35 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -671,6 +671,405 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>folderidx</th>\n",
+       "      <th>float</th>\n",
+       "      <th>profileidx</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>nlat</th>\n",
+       "      <th>nlon</th>\n",
+       "      <th>...</th>\n",
+       "      <th>prev_ts2</th>\n",
+       "      <th>prev_ts3</th>\n",
+       "      <th>prev_ts4</th>\n",
+       "      <th>prev_ts5</th>\n",
+       "      <th>prev_ts6</th>\n",
+       "      <th>prev_ts7</th>\n",
+       "      <th>prev_ts8</th>\n",
+       "      <th>prev_dy</th>\n",
+       "      <th>prev_dx</th>\n",
+       "      <th>in_chosen_basin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>89428</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2902573.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>-27.777</td>\n",
+       "      <td>-109.312</td>\n",
+       "      <td>-27.722</td>\n",
+       "      <td>-109.147</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-6.381664</td>\n",
+       "      <td>-0.307569</td>\n",
+       "      <td>1.169331</td>\n",
+       "      <td>0.678437</td>\n",
+       "      <td>0.630896</td>\n",
+       "      <td>-0.723380</td>\n",
+       "      <td>0.416301</td>\n",
+       "      <td>-0.046</td>\n",
+       "      <td>0.265</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89429</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2902573.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>-27.722</td>\n",
+       "      <td>-109.147</td>\n",
+       "      <td>-27.461</td>\n",
+       "      <td>-108.919</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-6.740602</td>\n",
+       "      <td>-0.870774</td>\n",
+       "      <td>1.611743</td>\n",
+       "      <td>0.820251</td>\n",
+       "      <td>0.886818</td>\n",
+       "      <td>-0.810814</td>\n",
+       "      <td>0.542596</td>\n",
+       "      <td>0.055</td>\n",
+       "      <td>0.165</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89430</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2902573.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>-27.461</td>\n",
+       "      <td>-108.919</td>\n",
+       "      <td>-27.396</td>\n",
+       "      <td>-108.747</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-6.598265</td>\n",
+       "      <td>-0.616752</td>\n",
+       "      <td>1.379309</td>\n",
+       "      <td>0.782344</td>\n",
+       "      <td>0.769953</td>\n",
+       "      <td>-0.841099</td>\n",
+       "      <td>0.628301</td>\n",
+       "      <td>0.261</td>\n",
+       "      <td>0.228</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89431</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2902573.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>-27.396</td>\n",
+       "      <td>-108.747</td>\n",
+       "      <td>-27.184</td>\n",
+       "      <td>-108.779</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-6.036335</td>\n",
+       "      <td>-0.214488</td>\n",
+       "      <td>0.994610</td>\n",
+       "      <td>0.597145</td>\n",
+       "      <td>0.429359</td>\n",
+       "      <td>-0.646446</td>\n",
+       "      <td>0.456008</td>\n",
+       "      <td>0.065</td>\n",
+       "      <td>0.172</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89432</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2902573.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>-27.184</td>\n",
+       "      <td>-108.779</td>\n",
+       "      <td>-27.197</td>\n",
+       "      <td>-108.802</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-5.911484</td>\n",
+       "      <td>-0.293214</td>\n",
+       "      <td>1.177932</td>\n",
+       "      <td>0.583710</td>\n",
+       "      <td>0.624795</td>\n",
+       "      <td>-0.630760</td>\n",
+       "      <td>0.529487</td>\n",
+       "      <td>0.212</td>\n",
+       "      <td>-0.032</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1199936</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5900395.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>-31.987</td>\n",
+       "      <td>-130.156</td>\n",
+       "      <td>-31.823</td>\n",
+       "      <td>-130.239</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-4.911387</td>\n",
+       "      <td>-0.073771</td>\n",
+       "      <td>-1.082395</td>\n",
+       "      <td>-0.362481</td>\n",
+       "      <td>0.624399</td>\n",
+       "      <td>-0.222743</td>\n",
+       "      <td>0.426153</td>\n",
+       "      <td>0.094</td>\n",
+       "      <td>0.193</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1199937</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5900395.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>-31.823</td>\n",
+       "      <td>-130.239</td>\n",
+       "      <td>-31.943</td>\n",
+       "      <td>-130.363</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-4.792071</td>\n",
+       "      <td>-0.175300</td>\n",
+       "      <td>-0.780688</td>\n",
+       "      <td>-0.340543</td>\n",
+       "      <td>0.737954</td>\n",
+       "      <td>-0.338791</td>\n",
+       "      <td>0.602678</td>\n",
+       "      <td>0.164</td>\n",
+       "      <td>-0.083</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1199938</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5900395.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>-31.943</td>\n",
+       "      <td>-130.363</td>\n",
+       "      <td>-32.069</td>\n",
+       "      <td>-130.205</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-4.562668</td>\n",
+       "      <td>0.259674</td>\n",
+       "      <td>-1.321892</td>\n",
+       "      <td>-0.436276</td>\n",
+       "      <td>0.516380</td>\n",
+       "      <td>-0.260359</td>\n",
+       "      <td>0.592548</td>\n",
+       "      <td>-0.120</td>\n",
+       "      <td>-0.124</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1199939</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5900395.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>-32.069</td>\n",
+       "      <td>-130.205</td>\n",
+       "      <td>-31.994</td>\n",
+       "      <td>-129.943</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-4.544283</td>\n",
+       "      <td>0.092383</td>\n",
+       "      <td>-1.170868</td>\n",
+       "      <td>-0.446612</td>\n",
+       "      <td>0.569944</td>\n",
+       "      <td>-0.247247</td>\n",
+       "      <td>0.543559</td>\n",
+       "      <td>-0.126</td>\n",
+       "      <td>0.158</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1199940</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5900395.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>-31.994</td>\n",
+       "      <td>-129.943</td>\n",
+       "      <td>-31.912</td>\n",
+       "      <td>-130.015</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-4.304980</td>\n",
+       "      <td>0.364265</td>\n",
+       "      <td>-1.268010</td>\n",
+       "      <td>-0.484388</td>\n",
+       "      <td>0.259696</td>\n",
+       "      <td>-0.133454</td>\n",
+       "      <td>0.570055</td>\n",
+       "      <td>0.075</td>\n",
+       "      <td>0.262</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>59196 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         folderidx      float  profileidx    year  month   day     lat  \\\n",
+       "89428          2.0  2902573.0         1.0  2013.0   10.0  10.0 -27.777   \n",
+       "89429          2.0  2902573.0         2.0  2013.0   10.0  20.0 -27.722   \n",
+       "89430          2.0  2902573.0         3.0  2013.0   10.0  30.0 -27.461   \n",
+       "89431          2.0  2902573.0         4.0  2013.0   11.0   9.0 -27.396   \n",
+       "89432          2.0  2902573.0         5.0  2013.0   11.0  19.0 -27.184   \n",
+       "...            ...        ...         ...     ...    ...   ...     ...   \n",
+       "1199936       10.0  5900395.0        10.0  2004.0    1.0   6.0 -31.987   \n",
+       "1199937       10.0  5900395.0        11.0  2004.0    1.0  16.0 -31.823   \n",
+       "1199938       10.0  5900395.0        12.0  2004.0    1.0  26.0 -31.943   \n",
+       "1199939       10.0  5900395.0        13.0  2004.0    2.0   5.0 -32.069   \n",
+       "1199940       10.0  5900395.0        14.0  2004.0    2.0  15.0 -31.994   \n",
+       "\n",
+       "             lon    nlat     nlon  ...  prev_ts2  prev_ts3  prev_ts4  \\\n",
+       "89428   -109.312 -27.722 -109.147  ... -6.381664 -0.307569  1.169331   \n",
+       "89429   -109.147 -27.461 -108.919  ... -6.740602 -0.870774  1.611743   \n",
+       "89430   -108.919 -27.396 -108.747  ... -6.598265 -0.616752  1.379309   \n",
+       "89431   -108.747 -27.184 -108.779  ... -6.036335 -0.214488  0.994610   \n",
+       "89432   -108.779 -27.197 -108.802  ... -5.911484 -0.293214  1.177932   \n",
+       "...          ...     ...      ...  ...       ...       ...       ...   \n",
+       "1199936 -130.156 -31.823 -130.239  ... -4.911387 -0.073771 -1.082395   \n",
+       "1199937 -130.239 -31.943 -130.363  ... -4.792071 -0.175300 -0.780688   \n",
+       "1199938 -130.363 -32.069 -130.205  ... -4.562668  0.259674 -1.321892   \n",
+       "1199939 -130.205 -31.994 -129.943  ... -4.544283  0.092383 -1.170868   \n",
+       "1199940 -129.943 -31.912 -130.015  ... -4.304980  0.364265 -1.268010   \n",
+       "\n",
+       "         prev_ts5  prev_ts6  prev_ts7  prev_ts8  prev_dy  prev_dx  \\\n",
+       "89428    0.678437  0.630896 -0.723380  0.416301   -0.046    0.265   \n",
+       "89429    0.820251  0.886818 -0.810814  0.542596    0.055    0.165   \n",
+       "89430    0.782344  0.769953 -0.841099  0.628301    0.261    0.228   \n",
+       "89431    0.597145  0.429359 -0.646446  0.456008    0.065    0.172   \n",
+       "89432    0.583710  0.624795 -0.630760  0.529487    0.212   -0.032   \n",
+       "...           ...       ...       ...       ...      ...      ...   \n",
+       "1199936 -0.362481  0.624399 -0.222743  0.426153    0.094    0.193   \n",
+       "1199937 -0.340543  0.737954 -0.338791  0.602678    0.164   -0.083   \n",
+       "1199938 -0.436276  0.516380 -0.260359  0.592548   -0.120   -0.124   \n",
+       "1199939 -0.446612  0.569944 -0.247247  0.543559   -0.126    0.158   \n",
+       "1199940 -0.484388  0.259696 -0.133454  0.570055    0.075    0.262   \n",
+       "\n",
+       "         in_chosen_basin  \n",
+       "89428               True  \n",
+       "89429               True  \n",
+       "89430               True  \n",
+       "89431               True  \n",
+       "89432               True  \n",
+       "...                  ...  \n",
+       "1199936             True  \n",
+       "1199937             True  \n",
+       "1199938             True  \n",
+       "1199939             True  \n",
+       "1199940             True  \n",
+       "\n",
+       "[59196 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chosen = shapely.Polygon(basins['SouthPacific'])\n",
+    "vPoint = np.vectorize(Point)\n",
+    "points_list = vPoint(data['lon'], data['lat'])\n",
+    "data['in_chosen_basin'] = chosen.contains(points_list)\n",
+    "subset = data[data.get('in_chosen_basin') == True]\n",
+    "\n",
+    "subset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subset.to_csv('SouthPacific.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -693,7 +1092,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.0.0"
   }
  },
  "nbformat": 4,
