reorganize and add workflow

--- a/data/merge_eof_slope.ipynb
+++ b/data/merge_eof_slope.ipynb
@@ -460,6 +460,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "# change this to whatever region you want\n",
     "data = pd.read_csv('SouthPacific.csv').drop(columns=['Unnamed: 0', 'in_chosen_basin'])\n",
     "data"
    ]
@@ -1133,7 +1134,7 @@
     "\n",
     "added = data.assign(ssh1=ssh1).assign(ssh2=ssh2).assign(bath1=bath1).assign(bath2=bath2)\n",
     "added = added[(added.get('bath1') != 2) & (added.get('ssh1') != 2)]\n",
-    "added.to_csv('SPacific.csv')\n",
+    "added.to_csv('Full_SPacific.csv')\n",
     "added"
    ]
   },
