--- a/plots/BasinAnalysis.ipynb
+++ b/plots/BasinAnalysis.ipynb
@@ -1108,6 +1108,8 @@
     }
    ],
    "source": [
+    "# modify region as desired\n",
+    "\n",
     "chosen1 = shapely.Polygon(basins['SP1'])\n",
     "chosen2 = shapely.Polygon(basins['SP2'])\n",
     "vPoint = np.vectorize(Point)\n",
